--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
-    "@angular/cli": "^8.0.0",
-    "@angular/compiler-cli": "^7.2.15",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^8.0.0",
-    "@angular/compiler-cli": "^7.2.15",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,5 +47,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  },
+  }
 }
